--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,7 @@
     -->
     <title>Conscious Wood</title>
   </head>
-  <body
-    style="
-      background-image: url(%PUBLIC_URL%/data/assets/pexels-fwstudio-172292.jpg);
-    "
-  >
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
